# frozen_space

./: .gitignore  CMakeLists.txt  LICENSE  build.bat  imgui.ini  vcpkg.json
src/: CMakeLists.txt
src/libs/core/: CMakeLists.txt
src/programs/: CMakeLists.txt
src/programs/FrozenSpace/: CMakeLists.txt  main.cpp
